--- a/postgresql-pgadmin/compose.yaml
+++ b/postgresql-pgadmin/compose.yaml
@@ -2,6 +2,8 @@ services:
   postgres:
     container_name: postgres
     image: postgres:16.2
+    volumes:
+      - C:\GT\Tech\Projects\DB\Postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PW}
