--- a/postgresql-pgadmin/compose.yaml
+++ b/postgresql-pgadmin/compose.yaml
@@ -15,6 +15,8 @@ services:
   pgadmin:
     container_name: pgadmin
     image: dpage/pgadmin4:2024-04-29-1
+    volumes:
+      - C:\GT\Tech\Projects\DB\pgadmin-data:/var/lib/pgadmin
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_MAIL}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PW}
